modificando logo voley bootstrap

--- a/pages/voley.html
+++ b/pages/voley.html
@@ -32,7 +32,7 @@
                     <a class="nav-link" href="./voley.html">Voley</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html"><img src="../assests/escudo racing.jpeg" alt=""></a>
+                    <a class="nav-link" href="../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./tenis.html">Tenis</a>
