--- a/pages/tenis.html
+++ b/pages/tenis.html
@@ -4,41 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tenis</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     <header>
-        <ul>
+        <!-- <ul>
             <li><a href="./futbol.html">Futbol</a></li>
             <li><a href="./voley.html">Voley</a></li>
             <li><a href="../index.html"><img src="../assests/escudo racing.jpeg"</a></li>
             <li><a href="./tenis.html">Tenis</a></li>
             <li><a href="./patin.html">Patin</a></li>
-        </ul>
-        <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+        </ul> -->
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav> -->
+              <ul class="navbar-nav">
+              <li class="nav-item">
+              <li class="nav-item">
+                  <a class="nav-link" href="./futbol.html">Futbol</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./voley.html">Voley</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./tenis.html">Tenis</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="./patin.html">Patin</a>
+              </li>
+              </ul>
+          </div>
+          </div>
+      </nav>
         </header>
     <h1>
         Clases de Tenis
@@ -78,5 +80,6 @@
             </a>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
