paginas actualizadas para entregar

--- a/pages/futbol.html
+++ b/pages/futbol.html
@@ -58,7 +58,7 @@
     <div class="video">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8l4x2LhufbA?si=APAli1mJozZUHfu1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
     <h2>Cronograma</h2>
-    <table>
+    <!-- <table>
         <thead>
             <tr>
             <th>Dias</th>
@@ -71,7 +71,25 @@
     <td>Pablo, Jose, Julian y Nicolas</td>
     <td>17:30hs hasta 18:30hs</td>
     <td>Categorias 2013,14,15,16,17</td>
-    </table>
+    </table> -->
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Dias</th>
+            <th scope="col">Profes</th>
+            <th scope="col">Horarios</th>
+            <th scope="col">Categorias</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lunes, Miercoles y Viernes</td>
+            <td>Pablo y Nicolas</td>
+            <td>17:30hs hasta 18:30hs</td>
+            <td>Categorias 2013,14,15,16,17</td>
+          </tr>
+        </tbody>
+      </table>
     <footer>
         <p>Copyright 2024</p>
         <nav>
