--- a/pages/tenis.html
+++ b/pages/tenis.html
@@ -45,8 +45,7 @@
     <h1>
         Clases de Tenis
     </h1>
-    <img src="../assests/escudo racing.jpeg" alt="">
-    <table>
+    <!-- <table>
         <thead>
             <tr>
             <th>Dias</th>
@@ -59,6 +58,24 @@
     <td>Pepe</td>
     <td>18:00hs hasta 20:00hs</td>
     <td>Desde 5 hasta 18 años</td>
+    </table> -->
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Dias</th>
+          <th scope="col">Profes</th>
+          <th scope="col">Horarios</th>
+          <th scope="col">Categorias</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lunes, Miercoles y Viernes</td>
+          <td>Pablo y Nicolas</td>
+          <td>17:30hs hasta 18:30hs</td>
+          <td>Categorias 2013,14,15,16,17</td>
+        </tr>
+      </tbody>
     </table>
     <footer>
         <p>Copyright 2024</p>
