--- a/pages/voley.html
+++ b/pages/voley.html
@@ -70,7 +70,7 @@
         </button>
     </div>
     <h2>Cronogramas</h2>
-    <table>
+    <!-- <table>
         <thead>
             <tr>
             <th>Dias</th>
@@ -83,7 +83,25 @@
     <td>Matias y Jorge</td>
     <td>18:00hs hasta 20:00hs</td>
     <td>Sub12, Sub15 y Sub18</td>
-    </table>
+    </table> -->
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Dias</th>
+            <th scope="col">Profes</th>
+            <th scope="col">Horarios</th>
+            <th scope="col">Categorias</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lunes, Miercoles y Viernes</td>
+            <td>Pablo y Nicolas</td>
+            <td>17:30hs hasta 18:30hs</td>
+            <td>Categorias 2013,14,15,16,17</td>
+          </tr>
+        </tbody>
+      </table>
     <footer>
         <p>Copyright 2024</p>
         <nav>
