--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in aspernatur quidem magnam, voluptates dignissimos quaerat temporibus blanditiis at necessitatibus soluta, omnis sit ipsum sunt pariatur quasi id, culpa vero.
     </p>
-    <a href="./pages/cantina.html">Saber mas</a>
+    <a href="./pages/patin.html">Saber mas</a>
     <form id="origen" class="beige">  
         <label for="nombre">Nombre y apellido</label>
         <input type="text" name="name" placeholder="Ciro"
