--- a/pages/patin.html
+++ b/pages/patin.html
@@ -45,7 +45,7 @@
     <h1>
         Clases de Patin
     </h1>
-    <table>
+    <!-- <table>
         <thead>
             <tr>
             <th>Dias</th>
@@ -58,7 +58,25 @@
     <td>Micaela</td>
     <td>17:00hs hasta 18:30hs</td>
     <td>Desde 6 años</td>
-    </table>
+    </table> -->
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Dias</th>
+            <th scope="col">Profes</th>
+            <th scope="col">Horarios</th>
+            <th scope="col">Categorias</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Lunes, Miercoles y Viernes</td>
+            <td>Pablo y Nicolas</td>
+            <td>17:30hs hasta 18:30hs</td>
+            <td>Categorias 2013,14,15,16,17</td>
+          </tr>
+        </tbody>
+      </table>
     <footer>
         <p>Copyright 2024</p>
         <nav>
