--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
             <ul class="navbar-nav">
             <li class="nav-item">
             <li class="nav-item">
-                <a class="nav-link" href="../RACING CLUB/pages/futbol.html">Futbol</a>
+                <a class="nav-link" href="./pages/futbol.html">Futbol</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../RACING CLUB/pages/voley.html">Voley</a>
+                <a class="nav-link" href="./pages/voley.html">Voley</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../RACING CLUB/pages/tenis.html">Tenis</a>
+                <a class="nav-link" href="./pages/tenis.html">Tenis</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../RACING CLUB/pages/patin.html">Patin</a>
+                <a class="nav-link" href="./pages/patin.html">Patin</a>
             </li>
             </ul>
         </div>
