--- a/index.html
+++ b/index.html
@@ -42,26 +42,31 @@
         </div>
     </nav>
     </header>
-    <main>
-    <section class="parallax"></section>
-    <h1>Racing Club</h1>
-    <p>Racing club fue fundado en 1923 por un grupo.....
-        harum quibusdam debitis.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.7654115751443!2d-62.75606072339896!3d-37.182045598200524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ea27812a4c5b8f%3A0x5d528c57cda00c64!2sRacing%20Club%20Carhu%C3%A8%20(Polideportivo)!5e0!3m2!1ses!2sar!4v1711497973287!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <h2>ACTIVIDADES</h2>
-    <h3>
-        Futbol
-    </h3>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
-    </p>
-    <a href="./pages/futbol.html">Saber mas</a>
+    <main class="container">
+        <section class="parallax"></section>
+        <h1>Racing Club</h1>
+        <p>Racing club fue fundado en 1923 por un grupo.....
+            harum quibusdam debitis.</p>
+        <h2>ACTIVIDADES</h2>
+        <section >
+    <div class="col-lg-6 col-md-6 col-sm-12">   
+            <h3>
+                Futbol
+            </h3>
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
+            </p>
+            <a href="./pages/futbol.html">Saber mas</a>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
     <h3>
         Voley
     </h3>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
     <a href="./pages/voley.html">Saber mas</a>
+</div>
+</section>
     <h3>
         Tenis
     </h3>
@@ -76,6 +81,8 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in aspernatur quidem magnam, voluptates dignissimos quaerat temporibus blanditiis at necessitatibus soluta, omnis sit ipsum sunt pariatur quasi id, culpa vero.
     </p>
     <a href="./pages/patin.html">Saber mas</a>
+</section>
+<section>
     <form id="origen" class="beige">  
         <label for="nombre">Nombre y apellido</label>
         <input type="text" name="name" placeholder="Ciro"
@@ -87,6 +94,8 @@
         <textarea name="message"id="mensaje"cols="30"rows="10"></textarea>
         <input type="submit" value="Enviar" class="btn-submit">
     </form>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.7654115751443!2d-62.75606072339896!3d-37.182045598200524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ea27812a4c5b8f%3A0x5d528c57cda00c64!2sRacing%20Club%20Carhu%C3%A8%20(Polideportivo)!5e0!3m2!1ses!2sar!4v1711497973287!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</section>
     </main>
     <footer>
         <p>Copyright 2024</p>
