--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
         <p>Racing club fue fundado en 1923 por un grupo.....
             harum quibusdam debitis.</p>
         <h2>ACTIVIDADES</h2>
-        <section >
-    <div class="col-lg-6 col-md-6 col-sm-12">   
-            <h3>
-                Futbol
-            </h3>
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
-            </p>
-            <a href="./pages/futbol.html">Saber mas</a>
-    </div>
-    <div class="col-lg-6 col-md-6 col-sm-12">
-    <h3>
-        Voley
-    </h3>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
-    <a href="./pages/voley.html">Saber mas</a>
-</div>
-</section>
+        <section class="actividades" >
+            <div class="col-lg-6 col-md-6 col-sm-12">   
+                    <h3>
+                        Futbol
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
+                    </p>
+                    <a href="./pages/futbol.html">Saber mas</a>
+            </div>
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                <h3>
+                    Voley
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
+                <a href="./pages/voley.html">Saber mas</a>
+            </div>
+      </section>
     <h3>
         Tenis
     </h3>
