haciendo responsive index

--- a/pages/futbol.html
+++ b/pages/futbol.html
@@ -9,16 +9,10 @@
 </head>
 <body>
     <header>
-        <!-- <ul>
-            <li><a href="./futbol.html">Futbol</a></li>
-            <li><a href="./voley.html">Voley</a></li>
-            <li><a href="../index.html"><img src="../assests/escudo racing.jpeg"</a></li>
-            <li><a href="./tenis.html">Tenis</a></li>
-            <li><a href="./patin.html">Patin</a></li>
-        </ul> -->
+      
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt="escudo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,56 +36,60 @@
             </div>
         </nav>
         </header>
-    <h1>
-        Futbol
-    </h1>
-    <h2>
-        Fotos del Partido
-    </h2>
-    <div class="galeria">
-        <img src="../assests/futbol 2.jpg" alt="" class="img-1">
-        <img src="../assests/futbol 3.jpg" alt="" class="img-2">
-        <img src="../assests/440570927_945303834264595_7444462513694944578_n.jpg" alt="" class="img-3">
-        <img src="../assests/futbol 4.jpg" alt="" class="img-4">
-    </div>
-    <h2>Resumen del ultimo partido</h2>
-    <div class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8l4x2LhufbA?si=APAli1mJozZUHfu1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
-    <h2>Cronograma</h2>
-    <!-- <table>
-        <thead>
-            <tr>
-            <th>Dias</th>
-            <th>Profes</th>
-            <th>Horarios</th>
-            <th>Categorias</th>
-        </tr>
-    </thead>
-    <td>Martes, Jueves y Viernes</td>
-    <td>Pablo, Jose, Julian y Nicolas</td>
-    <td>17:30hs hasta 18:30hs</td>
-    <td>Categorias 2013,14,15,16,17</td>
-    </table> -->
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Dias</th>
-            <th scope="col">Profes</th>
-            <th scope="col">Horarios</th>
-            <th scope="col">Categorias</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lunes, Miercoles y Viernes</td>
-            <td>Pablo y Nicolas</td>
-            <td>17:30hs hasta 18:30hs</td>
-            <td>Categorias 2013,14,15,16,17</td>
-          </tr>
-        </tbody>
-      </table>
-    <footer>
+        <main class="container">
+                <h1>
+                    Futbol
+                </h1>
+                <h2>
+                    Fotos del Partido
+                </h2>
+                <div class="galeria">
+                    <img src="../assests/futbol 2.jpg" alt="imagen1" class="img-1">
+                    <img src="../assests/futbol 3.jpg" alt="imagen2" class="img-2">
+                    <img src="../assests/440570927_945303834264595_7444462513694944578_n.jpg" alt="imagen3" class="img-3">
+                    <img src="../assests/futbol 4.jpg" alt="imagen4" class="img-4">
+                    <img src="../assests/escudo racing.jpeg" alt="escudo" class="img-5">
+                </div>
+                <h2>Resumen del ultimo partido</h2>
+                <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/8l4x2LhufbA?si=APAli1mJozZUHfu1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+                <h2>Cronograma</h2>
+                <!-- <table>
+                    <thead>
+                        <tr>
+                        <th>Dias</th>
+                        <th>Profes</th>
+                        <th>Horarios</th>
+                        <th>Categorias</th>
+                    </tr>
+                </thead>
+                <td>Martes, Jueves y Viernes</td>
+                <td>Pablo, Jose, Julian y Nicolas</td>
+                <td>17:30hs hasta 18:30hs</td>
+                <td>Categorias 2013,14,15,16,17</td>
+                </table> -->
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Dias</th>
+                        <th scope="col">Profes</th>
+                        <th scope="col">Horarios</th>
+                        <th scope="col">Categorias</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Lunes, Miercoles y Viernes</td>
+                        <td>Pablo y Nicolas</td>
+                        <td>17:30hs a 18:30hs</td>
+                        <td>2013 a 2017</td>
+                    </tr>
+                    </tbody>
+                </table>
+    </main>
+    <footer class="row">
         <p>Copyright 2024</p>
+        <p>Pedro Gallo y Mitre- Carhue</p>
         <nav>
             <a href="https://www.instagram.com/racingclubdecarhue/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
