--- a/pages/patin.html
+++ b/pages/patin.html
@@ -18,7 +18,7 @@
         </ul> -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt="escudo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,43 +42,39 @@
             </div>
         </nav>
         </header>
-    <h1>
-        Clases de Patin
-    </h1>
-    <!-- <table>
-        <thead>
-            <tr>
-            <th>Dias</th>
-            <th>Profes</th>
-            <th>Horarios</th>
-            <th>Categorias</th>
-        </tr>
-    </thead>
-    <td>Martes  y Jueves</td>
-    <td>Micaela</td>
-    <td>17:00hs hasta 18:30hs</td>
-    <td>Desde 6 años</td>
-    </table> -->
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Dias</th>
-            <th scope="col">Profes</th>
-            <th scope="col">Horarios</th>
-            <th scope="col">Categorias</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lunes, Miercoles y Viernes</td>
-            <td>Pablo y Nicolas</td>
-            <td>17:30hs hasta 18:30hs</td>
-            <td>Categorias 2013,14,15,16,17</td>
-          </tr>
-        </tbody>
-      </table>
+        <main class="container">
+                <h1>
+                    Clases de Patin
+                </h1>
+                <div class="galeriapatin">
+                    <img src="../assests/patin2.jpg" alt="patin2" class="imgpatin-2">
+                    <img src="../assests/patin1.jpg" alt="patin1" class="imgpatin-1">
+                    <img src="../assests/patin3.jpg" alt="patin3" class="imgpatin-3">
+                    <!-- <img src="../assests/patin4.jpg" alt="patin4" class="imgpatin-4"> -->
+                  
+                </div>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Dias</th>
+                        <th scope="col">Profes</th>
+                        <th scope="col">Horarios</th>
+                        <th scope="col">Categorias</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Sabado</td>
+                        <td>Nora</td>
+                        <td>10:30hs hasta 12:30hs</td>
+                        <td>Infantiles</td>
+                    </tr>
+                    </tbody>
+                </table>
+    </main>
     <footer>
         <p>Copyright 2024</p>
+        <p>Pedro Gallo y Mitre- Carhue</p>
         <nav>
             <a href="https://www.instagram.com/racingclubdecarhue/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
