--- a/pages/voley.html
+++ b/pages/voley.html
@@ -18,7 +18,7 @@
         </ul> -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assests/escudo racing.jpeg" alt="escudo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -42,68 +42,59 @@
             </div>
         </nav>
         </header>
-    <h1>
-        Voley
-    </h1>
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="../assests/voley 2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="../assests/voley 1.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="../assests/voley equipo.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="../assests/voley equipo 2.jpg" class="d-block w-100" alt="...">
-        </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-    <h2>Cronogramas</h2>
-    <!-- <table>
-        <thead>
-            <tr>
-            <th>Dias</th>
-            <th>Pofes</th>
-            <th>Horarios</th>
-            <th>Categorias</th>
-        </tr>
-    </thead>
-    <td>Lunes y Miercoles</td>
-    <td>Matias y Jorge</td>
-    <td>18:00hs hasta 20:00hs</td>
-    <td>Sub12, Sub15 y Sub18</td>
-    </table> -->
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Dias</th>
-            <th scope="col">Profes</th>
-            <th scope="col">Horarios</th>
-            <th scope="col">Categorias</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Lunes, Miercoles y Viernes</td>
-            <td>Pablo y Nicolas</td>
-            <td>17:30hs hasta 18:30hs</td>
-            <td>Categorias 2013,14,15,16,17</td>
-          </tr>
-        </tbody>
-      </table>
+        <main>
+                    <h1>
+                        Voley
+                    </h1>
+                    <div id="carouselExample" class="carousel slide">
+                        <div class="carousel-inner">
+                        <div class="carousel-item">
+                            <img src="../assests/voley equipo.jpg" class="d-block w-100" alt="voley equipo">
+                        </div>
+                        <div class="carousel-item active">
+                            <img src="../assests/voley 2.jpg" class="d-block w-100" alt="voley 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="../assests/voley 1.jpg" class="d-block w-100" alt="voley 1">
+                        </div>
+                       
+                        <div class="carousel-item">
+                            <img src="../assests/voley equipo 2.jpg" class="d-block w-100" alt="voley equipo 2">
+                        </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                        </button>
+                    </div>
+                    <h2>Cronogramas</h2>
+                   
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">Dias</th>
+                            <th scope="col">Profes</th>
+                            <th scope="col">Horarios</th>
+                            <th scope="col">Categorias</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Miercoles y Viernes</td>
+                            <td>Lucia</td>
+                            <td>17:00hs a 18:30hs</td>
+                            <td>Juveniles</td>
+                        </tr>
+                        </tbody>
+                    </table>
+    </main>
     <footer>
         <p>Copyright 2024</p>
+        <p>Pedro Gallo y Mitre- Carhue</p>
         <nav>
             <a href="https://www.instagram.com/racingclubdecarhue/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
