--- a/pages/tenis.html
+++ b/pages/tenis.html
@@ -42,23 +42,40 @@
           </div>
       </nav>
         </header>
+        <main class="container">
     <h1>
         Clases de Tenis
     </h1>
-    <!-- <table>
-        <thead>
-            <tr>
-            <th>Dias</th>
-            <th>Pofes</th>
-            <th>Horarios</th>
-            <th>Categorias</th>
-        </tr>
-    </thead>
-    <td>Martes  y Jueves</td>
-    <td>Pepe</td>
-    <td>18:00hs hasta 20:00hs</td>
-    <td>Desde 5 hasta 18 años</td>
-    </table> -->
+    <div class="row">
+
+    <div id="carouselExampleAutoplaying" class="carousel slide col-lg-6 col-md-6 col-sm-12" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assests/tenis1.png" class="d-block w-100" alt="tenis1">
+          </div>
+          <div class="carousel-item">
+            <img src="../assests/tenis2.png" class="d-block w-100" alt="tenis2">
+          </div>
+          <div class="carousel-item">
+            <img src="../assests/tenis3.png" class="d-block w-100" alt="tenis3">
+          </div>
+          <div class="carousel-item">
+            <img src="../assests/tenis4.png" class="d-block w-100" alt="tenis4">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <h2 class="esperamos">TE ESPERAMOS!</h2>
+      </div>
+    </div>
     <table class="table">
       <thead>
         <tr>
@@ -70,15 +87,17 @@
       </thead>
       <tbody>
         <tr>
-          <td>Lunes, Miercoles y Viernes</td>
-          <td>Pablo y Nicolas</td>
-          <td>17:30hs hasta 18:30hs</td>
-          <td>Categorias 2013,14,15,16,17</td>
+          <td>Martes y Jueves</td>
+          <td>Juan Manuel</td>
+          <td>14:30hs a 18:30hs</td>
+          <td>Adultos</td>
         </tr>
       </tbody>
     </table>
+</main>
     <footer>
         <p>Copyright 2024</p>
+        <p>Pedro Gallo y Mitre- Carhue</p>
         <nav>
             <a href="https://www.instagram.com/racingclubdecarhue/" target="_blank">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
