--- a/index.html
+++ b/index.html
@@ -42,53 +42,70 @@
         </div>
     </nav>
     </header>
-    <main>
-    <section class="parallax"></section>
-    <h1>Racing Club</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Corporis maiores sunt vero magni eveniet enim ullam sed, sapiente praesentium
-        cum iste, saepe reprehenderit assumenda recusandae, molestias perferendis
-        harum quibusdam debitis.</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.7654115751443!2d-62.75606072339896!3d-37.182045598200524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ea27812a4c5b8f%3A0x5d528c57cda00c64!2sRacing%20Club%20Carhu%C3%A8%20(Polideportivo)!5e0!3m2!1ses!2sar!4v1711497973287!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <h2>ACTIVIDADES</h2>
-    <h3>
-        Futbol
-    </h3>
-    <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
-    </p>
-    <a href="./pages/futbol.html">Saber mas</a>
-    <h3>
-        Voley
-    </h3>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
-    <a href="./pages/voley.html">Saber mas</a>
-    <h3>
-        Tenis
-    </h3>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus blanditiis nesciunt vitae error ipsam tenetur aspernatur autem expedita facere, rerum enim optio quos, laudantium, odit rem ipsum. Sit, temporibus.
-    </p>
-    <a href="./pages/tenis.html">Saber mas</a>
-    <h3>
-        Patin
-    </h3>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in aspernatur quidem magnam, voluptates dignissimos quaerat temporibus blanditiis at necessitatibus soluta, omnis sit ipsum sunt pariatur quasi id, culpa vero.
-    </p>
-    <a href="./pages/patin.html">Saber mas</a>
-    <form id="origen" class="beige">  
-        <label for="nombre">Nombre y apellido</label>
-        <input type="text" name="name" placeholder="Ciro"
-        <label for="correo">Correo electronico</label>
-        <input type="email" name="email" id="correo" placeholder="nombre@correo.com">
-        <label for="celular">Celular (Opcional)</label>
-        <input type="tel" name="tel" id="celular" placeholder="+549111111111">
-        <label for="mensaje">Mensaje</label>
-        <textarea name="message"id="mensaje"cols="30"rows="10"></textarea>
-        <input type="submit" value="Enviar" class="btn-submit">
-    </form>
+    <main class="container">
+        <section class="parallax"></section>
+        <h1>Racing Club</h1>
+        <p>Racing club fue fundado en 1923 por un grupo.....
+            harum quibusdam debitis.</p>
+        <h2>ACTIVIDADES</h2>
+        <section class="actividades row " >
+            <div class="col-lg-6 col-md-6 col-sm-12">   
+                    <h3>
+                        Futbol
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
+                    </p>
+                    <a href="./pages/futbol.html">Saber mas</a>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12">
+                <h3>
+                    Voley
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
+                <a href="./pages/voley.html">Saber mas</a>
+            </div>
+      </section>
+      <section class="actividades row" >
+        <div class="col-lg-6 col-md-6 col-sm-12"> 
+                <h3>
+                    Tenis
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus blanditiis nesciunt vitae error ipsam tenetur aspernatur autem expedita facere, rerum enim optio quos, laudantium, odit rem ipsum. Sit, temporibus.
+                </p>
+                <a href="./pages/tenis.html">Saber mas</a>
+         </div>
+         <div class="col-lg-6 col-md-6 col-sm-12">  
+                <h3>
+                    Patin
+                </h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in aspernatur quidem magnam, voluptates dignissimos quaerat temporibus blanditiis at necessitatibus soluta, omnis sit ipsum sunt pariatur quasi id, culpa vero.
+                </p>
+                <a href="./pages/patin.html">Saber mas</a>
+         </div>
+        </section>
+<h2>Queres asociarte?</h2>
+        
+            <form id="origen" class="beige">  
+                <label for="nombre">Nombre y apellido</label>
+                <input type="text" name="name" placeholder="Ciro"
+                <label for="correo">Correo electronico</label>
+                <input type="email" name="email" id="correo" placeholder="nombre@correo.com">
+                <label for="celular">Celular (Opcional)</label>
+                <input type="tel" name="tel" id="celular" placeholder="+549111111111">
+                <label for="mensaje">Mensaje</label>
+                <textarea name="message"id="mensaje"cols="30"rows="10"></textarea>
+                <input type="submit" value="Enviar" class="btn-submit">
+            </form>
+    <div class="mapa">    
+    <h2>Encontranos aqui</h2>
+   
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3178.7654115751443!2d-62.75606072339896!3d-37.182045598200524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95ea27812a4c5b8f%3A0x5d528c57cda00c64!2sRacing%20Club%20Carhu%C3%A8%20(Polideportivo)!5e0!3m2!1ses!2sar!4v1711497973287!5m2!1ses!2sar" width=100% height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    
     </main>
     <footer>
         <p>Copyright 2024</p>
