--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 </head>
 <body>
     <header>
-    <!-- <ul>
-        <li><a href="./pages/futbol.html">Futbol</a></li>
-        <li><a href="./pages/voley.html">Voley</a></li>
-        <li><img src="./assests/escudo racing.jpeg" alt=""><a href="index.html"></a></li>
-        <li><a href="./pages/tenis.html">Tenis</a></li>
-        <li><a href="./pages/patin.html">Patin</a></li>
-    </ul> -->
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html"><img src="./assests/escudo racing.jpeg" alt="escudo"></a>
@@ -45,8 +38,7 @@
     <main class="container">
         <section class="parallax"></section>
         <h1>Racing Club</h1>
-        <p>Racing club fue fundado en 1923 por un grupo.....
-            harum quibusdam debitis.</p>
+        <p>Corría el año 1923 cuando un grupo de amigos que se reunían en un bulín mistongo de la calle Rivadavia para escuchar música, degustar vinos; y por supuesto hablar de fútbol, decidieron fundar un club, al que llamaron Racing Futbol Club. Fue un 6 de mayo de 1923.</p>
         <h2>ACTIVIDADES</h2>
         <section class="actividades row " >
             <div class="col-lg-6 col-md-6 col-sm-12">   
@@ -54,7 +46,7 @@
                         Futbol
                     </h3>
                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa reprehenderit modi eaque numquam nihil laborum commodi laboriosam impedit dolorem voluptas magni accusamus cumque quos iste id, voluptatum fugiat nostrum eum.
+                        Racing Club se afilio a la liga regional de suarez en el año 1992, consagrandose 6 veces campeon de la misma, siendo el maximo ganador desde su llegada a la liga. Esta es la disciplina central del club, teniendo una escuela infantil modelo con 5 categorias inferiores de un gran nivel, que aglutina a mas de 500 niño de entre 4 a 17 años.
                     </p>
                     <a href="./pages/futbol.html">Saber mas</a>
             </div>
@@ -63,7 +55,7 @@
                     Voley
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae officiis culpa iste amet, laudantium quaerat quas quam repellendus, et eveniet rerum facilis, reiciendis similique architecto soluta quidem ex voluptas.</p>
+                    Esta es una actividad recientiemente añadida en el club que ha logrado conformar grupos de todas las categorias, desde mini hasta maxi voley. Compiten en la liga suarense de voley obtiendo grandes resultados.</p>
                 <a href="./pages/voley.html">Saber mas</a>
             </div>
       </section>
@@ -73,7 +65,7 @@
                     Tenis
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo doloribus blanditiis nesciunt vitae error ipsam tenetur aspernatur autem expedita facere, rerum enim optio quos, laudantium, odit rem ipsum. Sit, temporibus.
+                    El club cuenta con 2 canchas de polvo de ladrillo que fueron las primeras en instalarse en el pueblo. Si bien ha tenido momentos de inactividad en sus clases, actualmente cuenta con una escuela con mas de 40 alumnos.
                 </p>
                 <a href="./pages/tenis.html">Saber mas</a>
          </div>
@@ -82,7 +74,7 @@
                     Patin
                 </h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati in aspernatur quidem magnam, voluptates dignissimos quaerat temporibus blanditiis at necessitatibus soluta, omnis sit ipsum sunt pariatur quasi id, culpa vero.
+                    El patin se añadio al club en su centenario, gracias a un grupo que tomo la iniciativa para participar en los torneos regionales de patin artistico de la zona
                 </p>
                 <a href="./pages/patin.html">Saber mas</a>
          </div>
