--- a/pages/futbol.html
+++ b/pages/futbol.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"content="Sitio web de Racing Carhue; club deportivo que se desarrolla en las disciplinas de futbol, voley, tenis y patin tanto a nivel local como regional">
+    <meta name="keywords"content="Racing, Carhue, club, futbol, tenis, voley, patin, liga, suarez">
     <title>Futbol</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
